--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -31,10 +31,14 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 blur-kern = "3x3box";
 
+corner-radius = 15
+blur-background = false
+
 blur-background-exclude = [
   "window_type = 'dock'",
   "name = 'rofi - calc'",
   "name = 'rofi - drun'",
+  "name = 'tint2'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
@@ -53,8 +57,8 @@ wintypes:
 {
   normal = { full-shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; }
-  dock = { full-shadow = true; }
-  dnd = { shadow = false; }
+  dock = { shadow = true; }
+  dnd = { full-shadow = true; }
   popup_menu = { opacity = 1; }
   dropdown_menu = { opacity = 1; }
 };
