--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -31,7 +31,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 blur-kern = "3x3box";
 
-corner-radius = 15
+corner-radius = 0
 blur-background = false
 
 blur-background-exclude = [
@@ -48,7 +48,6 @@ mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 60
 detect-transient = true
 detect-client-leader = true
 use-damage = true
@@ -57,7 +56,7 @@ wintypes:
 {
   normal = { full-shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; }
-  dock = { shadow = true; }
+  dock = { full-shadow = true; }
   dnd = { full-shadow = true; }
   popup_menu = { opacity = 1; }
   dropdown_menu = { opacity = 1; }
